--- a/Certificate-generator/index.html
+++ b/Certificate-generator/index.html
@@ -47,7 +47,7 @@
         <div class="container">
 
             <div class="certificate-header">
-                <h1>Emulation<span></h1>
+                <h1>Practice<span></h1>
                 <h4>Issued <span class="month"></span> <span class="date"></span>, <span class="year"></span></span></h4>
             </div>
 
